# openclaw-podman-multi-pod-starter

./: .env.example  .gitattributes  .gitignore  README.ja.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.openclaw/instances/agent_001/: openclaw.json  pod.yaml
.openclaw/instances/agent_002/: openclaw.json  pod.yaml
.openclaw/mattermost/: pod.yaml
assets/: mattermost-openclaw-autonomous-chat-architecture.drawio
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/guide/: agent-teams.md  articles.md  configuration.md  quickstart.md  releases.md  validation.md
docs/guide/releases/: v0.1.0.md
docs/ja/: index.md
mattermost-plugins/rokuseki-brand/: plugin.json
mattermost-plugins/rokuseki-sidebar-icon/: README.md  plugin.json
reports/: pod-openclaw-gemma-report.md  pod-openclaw-glm5-turbo-report.md  qa-autonomous-board-discussion-inventory.md  qa-inventory-mattermost-autochat-2026-04-09.md
scripts/: autochat_turn.py  autostart.ps1  doctor.ps1  init.ps1  launch.ps1  logs.ps1  mattermost.ps1  mattermost_add_reaction.py  mattermost_autochat_turn.py  mattermost_create_channel.py  mattermost_dispatch_turn.py  mattermost_get_state.py  mattermost_post_message.py  mattermost_workspace_turn.py  print-env.ps1  render_board_view.py  shared_board_app.html  shared_board_service.py  status.ps1  stop.ps1
scripts/mattermost_tools/: README.md  add_reaction.py  common_runtime.py  create_channel.py  get_state.py  post_message.py
src/openclaw_podman_starter/: cli.py
tests/: test_cli.py
(+42 files in other folders)
